force-app/main/default/objects/Case_Staging_Table__c/Case_Staging_Table__c.object-meta.xml
<CustomObject>
    <label>Case Staging Table</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Case Staging id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Staging Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>