force-app/main/default/objects/Case_Staging_Table__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Staging Table</relationshipLabel>
    <relationshipName>Case_Staging_Table</relationshipName>
    <type>Lookup</type>
</CustomField>