force-app/main/default/objects/Case_Staging_Table__c/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>