force-app/main/default/objects/Case_Staging_Table__c/fields/Claimant_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm_ID__c</fullName>
    <label>Claimant Firm ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>