force-app/main/default/objects/Case_Staging_Table__c/fields/Claimant_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm_Name__c</fullName>
    <label>Claimant Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>