force-app/main/default/objects/Case_Staging_Table__c/fields/Claimant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_First_Name__c</fullName>
    <label>Claimant First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>