force-app/main/default/objects/Case_Staging_Table__c/fields/Defendant_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Date_of_Birth__c</fullName>
    <label>Defendant Date of Birth</label>
    <type>Date</type>
</CustomField>