force-app/main/default/objects/Case_Staging_Table__c/fields/Defendant_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_ID__c</fullName>
    <label>Defendant Firm ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>