force-app/main/default/objects/Case_Staging_Table__c/fields/Defendant_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Name__c</fullName>
    <label>Defendant Firm Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>