force-app/main/default/objects/Case_Staging_Table__c/fields/Defendant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_First_Name__c</fullName>
    <label>Defendant First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>