force-app/main/default/objects/Case_Staging_Table__c/fields/Defendant_Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Vehicle_Registration_Number__c</fullName>
    <label>Defendant Vehicle Registration Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>