force-app/main/default/objects/Case_Staging_Table__c/fields/Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Firm_Team__c</fullName>
    <label>Firm Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>