force-app/main/default/objects/Case_Staging_Table__c/fields/Import_Errors__c.field-meta.xml
<CustomField>
    <fullName>Import_Errors__c</fullName>
    <label>Import Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>