force-app/main/default/objects/Case_Staging_Table__c/fields/Import_Key__c.field-meta.xml
<CustomField>
    <fullName>Import_Key__c</fullName>
    <formula>TEXT(Incident_Date__c)&amp;IF (ISBLANK(Incident_Post_Code__c) = TRUE , &apos;&apos;, LEFT(Incident_Post_Code__c, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Key</label>
    <type>Text</type>
</CustomField>