force-app/main/default/objects/Case_Staging_Table__c/fields/Incident_City__c.field-meta.xml
<CustomField>
    <fullName>Incident_City__c</fullName>
    <label>Incident City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>