force-app/main/default/objects/Case_Staging_Table__c/fields/Incident_Country__c.field-meta.xml
<CustomField>
    <fullName>Incident_Country__c</fullName>
    <label>Incident Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>