force-app/main/default/objects/Case_Staging_Table__c/fields/Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description__c</fullName>
    <label>Incident Description</label>
    <type>TextArea</type>
</CustomField>