force-app/main/default/objects/Case_Staging_Table__c/fields/Incident_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Incident_Post_Code__c</fullName>
    <label>Incident Post Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>