force-app/main/default/objects/Case_Staging_Table__c/fields/Incident_Post_Code_Shorten__c.field-meta.xml
<CustomField>
    <fullName>Incident_Post_Code_Shorten__c</fullName>
    <formula>IF (ISBLANK(Incident_Post_Code__c) = TRUE , &apos;&apos;, LEFT(Incident_Post_Code__c, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Post Code Shorten</label>
    <type>Text</type>
</CustomField>