force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Claimant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Claimant_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapped Claimant Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Staging Table (Mapped Claimant Firm)</relationshipLabel>
    <relationshipName>Case_Staging_Table1</relationshipName>
    <type>Lookup</type>
</CustomField>