force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Defendant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Defendant_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapped Defendant Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Staging Table</relationshipLabel>
    <relationshipName>Case_Staging_Table</relationshipName>
    <type>Lookup</type>
</CustomField>