force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Firm_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapped Firm Team</label>
    <referenceTo>Firm_Team__c</referenceTo>
    <relationshipLabel>Case Staging Table</relationshipLabel>
    <relationshipName>Case_Staging_Table</relationshipName>
    <type>Lookup</type>
</CustomField>