force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Incident__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapped Incident</label>
    <referenceTo>Incident_Information__c</referenceTo>
    <relationshipLabel>Case Staging Table</relationshipLabel>
    <relationshipName>Case_Staging_Table</relationshipName>
    <type>Lookup</type>
</CustomField>