force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Incident_Count__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Incident_Count__c</fullName>
    <label>Mapped Incident Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>