force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapped Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Case Staging Table</relationshipLabel>
    <relationshipName>Case_Staging_Table</relationshipName>
    <type>Lookup</type>
</CustomField>