force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Status__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Status__c</fullName>
    <label>Mapped Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>