force-app/main/default/objects/Case_Staging_Table__c/fields/Mapped_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Status_Detail__c</fullName>
    <label>Mapped Status Detail</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>