force-app/main/default/objects/Case_Staging_Table__c/fields/Merit_Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Merit_Claimant_Position__c</fullName>
    <label>Merit Claimant Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>