force-app/main/default/objects/Case_Staging_Table__c/fields/Protocol_Code__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Code__c</fullName>
    <label>Protocol Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>