force-app/main/default/objects/Case_Staging_Table__c/fields/Related_New_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_New_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related New Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Staging Table (Related New Case)</relationshipLabel>
    <relationshipName>Case_Staging_Table1</relationshipName>
    <type>Lookup</type>
</CustomField>