force-app/main/default/objects/Case_Staging_Table__c/fields/Validate_and_Insert__c.field-meta.xml
<CustomField>
    <fullName>Validate_and_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate and Insert!</label>
    <type>Checkbox</type>
</CustomField>