force-app/main/default/objects/Case_Staging_Table__c/validationRules/Protocol_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Protocol_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(Validate_and_Insert__c = true,
ISBLANK(	Mapped_Protocol__c) = true
	)</errorConditionFormula>
    <errorDisplayField>Mapped_Protocol__c</errorDisplayField>
    <errorMessage>One can not proceed that until the correct Protocol has been mapped</errorMessage>
</ValidationRule>