force-app/main/default/objects/Case_Staging_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_New_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Mapped_Status__c</columns>
    <columns>Mapped_Status_Detail__c</columns>
    <columns>Case_Source__c</columns>
    <columns>Protocol_Code__c</columns>
    <columns>Defendant_Last_Name__c</columns>
    <columns>Incident_Date__c</columns>
    <columns>Incident_Post_Code__c</columns>
    <columns>Incident_Country__c</columns>
    <columns>Claimant_Firm_ID__c</columns>
    <columns>Defendant_Firm_ID__c</columns>
    <columns>Address_Line_1__c</columns>
    <columns>Address_Line_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>