force-app/main/default/objects/Case_Staging_Table__c/listViews/Today_s_Case_Staging_Records.listView-meta.xml
<ListView>
    <fullName>Today_s_Case_Staging_Records</fullName>
    <columns>NAME</columns>
    <columns>Related_New_Case__c</columns>
    <columns>Mapped_Status__c</columns>
    <columns>Claimant_Reference_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Mapped_Status_Detail__c</columns>
    <columns>Mapped_Firm_Team__c</columns>
    <columns>Protocol_Code__c</columns>
    <columns>Defendant_Last_Name__c</columns>
    <columns>Incident_Date__c</columns>
    <columns>Incident_Post_Code__c</columns>
    <columns>Incident_Country__c</columns>
    <columns>Claimant_Firm_ID__c</columns>
    <columns>Defendant_Firm_ID__c</columns>
    <columns>Address_Line_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Case Staging Records</label>
</ListView>